[tool.poetry]
name = "boa-solidity"
version = "0.1.1"
description = "Solidity support for Titanoboa"
authors = ["z80 <z80@ophy.xyz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/z80dev/boa-solidity"

[tool.poetry.dependencies]
python = "^3.10"
titanoboa = "^0.1.9"
py-solc-x = "^2.0.2"
eth-abi = "^5.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
