[project]
name = "boa-solidity"
version = "0.1.2"
description = "Solidity support for Titanoboa"
requires-python = ">=3.10"
authors = [
    {name = "z80 z80", email = "z80@ophy.xyz"},
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/z80dev/boa-solidity"
dependencies = [
    "eth-abi>=5.1.0",
    "py-solc-x>=2.0.3",
    "titanoboa>=0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
